--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
+  <nav class="navbar fixed-top d-flex justify-content-center">
+    <ul class="d-flex">
+      <li>home</li>
+      <a href="./assets/pages/about.html"><li>j+t</li></a>
+      <li>enneagram</li>
+      <li>contact</li>
+    </ul>
+  </nav>
   <header class="row d-flex justify-content-center align-items-center">
-    <nav>
-      <ul class="d-flex">
-        <li>home</li>
-        <li>about</li>
-        <li>enneagram</li>
-        <li>contact</li>
-      </ul>
-    </nav>
     <h1 class="col-md-12 text-center">social enneagram</h1>
     <!-- <h1 class="col-md-12 text-center">enneagram</h1> -->
   </header>
