--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- <h1 class="col-md-12 text-center">enneagram</h1> -->
   </header>
 
-  <section class="section-one d-flex justify-content-center align-items-center">
+  <section class="row section-one d-flex justify-content-center align-items-center">
     <img src="./assets/images/se.jpg">
   </section>
-  <section class="section-two d-flex justify-content-center align-items-center">
+  <section class="row section-two d-flex justify-content-center align-items-center">
     <img src="./assets/images/enneagram.png">
   </section>
 
