--- a/index.html
+++ b/index.html
@@ -11,48 +11,35 @@
   <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-  <nav class="navbar fixed-top d-flex justify-content-center">
-    <ul class="d-flex">
+  <figure class="mobile-menu">
+    <img class="button" src="./assets/images/menu.png">
+  </figure>
+  <nav class="">
+    <ul class="">
       <li>home</li>
       <a href="./assets/pages/about.html"><li>j+t</li></a>
       <li>enneagram</li>
       <li>contact</li>
     </ul>
   </nav>
-  <header class="row d-flex justify-content-center align-items-center">
-    <h1 class="col-md-12 text-center">social enneagram</h1>
-    <!-- <h1 class="col-md-12 text-center">enneagram</h1> -->
+  <header class="">
+    <h1 class="">social enneagram</h1>
   </header>
-
-  <section class="row section-one d-flex justify-content-center align-items-center">
+  <!-- Section One -->
+  <section class="section section-one">
     <img src="./assets/images/se.jpg">
   </section>
-  <section class="row section-two d-flex justify-content-center align-items-center">
+  <!-- Section Two -->
+  <section class="section section-two">
     <img src="./assets/images/enneagram.png">
   </section>
 
-  <footer class="text-center">
+  <footer class="">
     <p>&copy 2018 | <a href="https://instagram.com/socialenneagram" target="_blank">Instagram</a></p>
   </footer>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-  <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <!-- Main JS files -->
   <script src="./assets/js/main.js"></script>
 </body>
