--- a/assets/pages/enneagram.html
+++ b/assets/pages/enneagram.html
@@ -29,7 +29,7 @@
 
   <!-- Section One -->
   <section class="section section-five">
-    <img src="../images/what.jpg">
+    <img src="../images/what-two.jpg">
     <p>
       The Enneagram is tremendously helpful tool. It has been used to help us map out and navigate the journey of our souls.
     </p>
