--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
   <!-- Section One -->
   <section class="section section-one">
-    <img src="./assets/images/self.jpg">
+    <img src="./assets/images/self-two.jpg">
   </section>
   <!-- Section Two -->
   <section class="section section-two">
