--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </nav>
   <header class="">
     <!-- <h1 class="">social enneagram</h1> -->
-    <img src="./assets/images/LOGO.png">
+    <img src="./assets/images/logo.png">
   </header>
   <!-- Section One -->
   <section class="section section-one">
